nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service

spec:

  type: LoadBalancer # LoadBalancer will create an ELB in AWS and assign a public IP to it

  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
