ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: istio-alb
  namespace: nginx-ingress

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: istio-ingressgateway

            port:
              number: 80
